Update `pnpm-lock.yaml` to update dependencies for `tailwindcss`, `wrangler`, and `@cloudflare/workers-types` to their latest versions.
Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -5,6 +5,8 @@ import HowICodeContent from "../components/HowICodeContent.astro";
 
 <Layout title="How I Code">
     <main class="prose">
-        <HowICodeContent />
+        <h2>
+            <a rel="prefetch" href="/blog/how-i-code">How I Code</a>
+        </h2>
     </main>
 </Layout>
