--- a/apps/dashboard/src/index.css
+++ b/apps/dashboard/src/index.css
@@ -2,26 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
-.MainLayout {
-    display: grid;
-    height: 100vh;
-    grid-template-rows: auto 1fr auto;
-    grid-template-areas:
+@layer custom {
+    .MainLayout {
+        display: grid;
+        block-size: 100vb;
+        grid-template-rows: auto 1fr auto;
+        grid-template-areas:
         "header"
         "main"
         "footer";
-}
+    }
 
-.Header {
-    grid-area: header;
-}
+    .Header {
+        grid-area: header;
+    }
 
-.Main {
-    grid-area: main;
-    overflow: auto;
-}
+    .Main {
+        grid-area: main;
+        overflow: auto;
+    }
 
-.Footer {
-    grid-area: footer;
+    .Footer {
+        grid-area: footer;
 
+    }
 }
